Revision history for Dist-Zilla-Plugin-GitHub

{{$NEXT}}

  - Fix error in calculating github credentials (J.Maslak, #52)

0.45      2018-05-27 03:56:57Z

  - Authentication is optionally available for all requests, via the new
    'require_auth' option. (Dave Rolsky, #51)

0.44      2017-05-11 09:30:45Z

  - fix undef warnings in [GitHub::Update] when any current settings un GitHub
    are unset.

0.43      2016-12-25 01:42:31Z

  - avoid undef warnings when the login name cannot be determined from git
    configs (Mohammad S Anwar, GH#49)

0.42      2016-01-28 02:20:07Z

  - localize locale when fetching repository information (thanks, Jose Luis
    Perez Diez!)

0.41      2015-08-07 03:36:05Z

  - add configs to metadata in [GitHub::Update]
  - avoid needless authentication and network calls when no information is
    being changed (Dave Rolsky, #47)

0.40      2015-01-08 15:00:01-08:00 America/Vancouver

 - fix error in JSON conversion in 0.39 that caused all requests to fail
   (thanks, Dave Rolsky!)

0.39      2014-12-30 19:44:24+01:00 Europe/Rome

 - Check for _check_response() return value before using it
 - Switch from JSON.pm to JSON::MaybeXS (GH#44) (thanks, @karenetheridge!)

0.38      2014-06-28 12:38:24+02:00 Europe/Rome

 - Support using tokens with HTTP Basic Auth (GH#36) (thanks, @RsrchBoy!)
 - Support 2-factor authentication (GH#38) (GH#39) (thanks, @friedo!)
 - Fix password prompt
 - Support for creating repos within an organization (GH#40) (thanks, @friedo!)

0.36      2013-12-03 19:25:55 Europe/Rome

 - Require Net::SSLeay for HTTP::Tiny SSL support and check HTTP::Tiny
   exceptions (GH#33) (thanks, @chorny!)

0.35      2013-07-27 14:58:49 Europe/Rome

 - Change phase for [Github::Update] from Releaser to AfterRelease (GH#27)
   (thanks, @karenetheridge!)
 - Add options to enable/disable issues, wiki and downloads when creating a
   new repository (GH#29)

0.34      2013-05-03 22:17:26 Europe/Rome
